fix horizontal scroll bug

--- a/skins/tiny-green/progressbar.css
+++ b/skins/tiny-green/progressbar.css
@@ -30,6 +30,7 @@
 	text-align: right;
 	text-shadow: 0px 0px 2px #000;
 	text-indent: 9999px;
+	overflow: hidden;
 
 	background-image:-webkit-gradient(linear,71% 25%,71% 69%,color-stop(0, rgb(118,177,1)),color-stop(0.47, rgb(118,177,1)),color-stop(0.48, rgb(102,153,0)),color-stop(1, rgb(102,153,0)));
 	background-image:-webkit-linear-gradient(-90deg,rgb(118,177,1) 0%,rgb(118,177,1) 47%,rgb(102,153,0) 48%,rgb(102,153,0) 100%);
